2006-03-14  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/avi/gstavidemux.c: (gst_avi_demux_invert):
	  Fix DIB image inversion for pictures with a
	  depth != 8 (#305279).

2006-03-14  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/jpeg/gstjpegdec.c: (gst_jpeg_dec_class_init),
	(gst_jpeg_dec_chain), (gst_jpeg_dec_change_state):
	* ext/jpeg/gstjpegdec.h:
	  Fix durations on outgoing buffers after seeking
	  in MJPEG files (#334083); some minor clean-ups.

2006-03-13  Wim Taymans  <wim@fluendo.com>

	* gst/wavparse/gstwavparse.c: (gst_wavparse_reset),
	(gst_wavparse_change_state):
	Implement seek in READY (re-fixes #327658)

2006-03-13  Wim Taymans  <wim@fluendo.com>

	* ext/cairo/gsttextoverlay.c: (gst_text_overlay_setcaps):
	* ext/esd/esdmon.c: (gst_esdmon_get):
	* ext/flac/gstflactag.c: (gst_flac_tag_chain):
	* ext/gdk_pixbuf/gstgdkpixbuf.c: (gst_gdk_pixbuf_sink_setcaps),
	(gst_gdk_pixbuf_sink_getcaps):
	* ext/jpeg/gstjpegenc.c: (gst_jpegenc_getcaps),
	(gst_jpegenc_setcaps):
	* ext/jpeg/gstsmokedec.c: (gst_smokedec_chain):
	* ext/jpeg/gstsmokeenc.c: (gst_smokeenc_getcaps),
	(gst_smokeenc_setcaps):
	* ext/libmng/gstmngdec.c: (gst_mngdec_sinklink),
	(gst_mngdec_src_getcaps):
	* ext/libmng/gstmngenc.c: (gst_mngenc_sinklink),
	(gst_mngenc_chain):
	* ext/libpng/gstpngenc.c: (gst_pngenc_setcaps):
	* ext/mikmod/gstmikmod.c: (gst_mikmod_srclink):
	* ext/speex/gstspeexdec.c: (speex_dec_convert),
	(speex_dec_src_event), (speex_dec_chain):
	* gst/avi/gstavimux.c: (gst_avimux_vidsinkconnect),
	(gst_avimux_audsinkconnect), (gst_avimux_handle_event):
	* gst/debug/negotiation.c: (gst_negotiation_getcaps),
	(gst_negotiation_pad_link), (gst_negotiation_chain):
	* gst/flx/gstflxdec.c: (gst_flxdec_src_query_handler),
	(gst_flxdec_chain):
	* gst/interleave/deinterleave.c: (deinterleave_sink_link),
	(deinterleave_chain):
	* gst/law/mulaw-encode.c: (mulawenc_setcaps):
	* gst/median/gstmedian.c: (gst_median_link):