@@ -1,5 +1,11 @@
 2006-03-14  Tim-Philipp Müller  <tim at centricular dot net>
 
+	* gst/avi/gstavidemux.c: (gst_avi_demux_process_next_entry):
+	  Catch short reads, like they might happen with truncated
+	  files (see #305279); remove unnecessary indentation.
+
+2006-03-14  Tim-Philipp Müller  <tim at centricular dot net>
+
 	* gst/avi/gstavidemux.c: (gst_avi_demux_invert):
 	  Fix DIB image inversion for pictures with a
 	  depth != 8 (#305279).
